--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://wailazer.github.io/sprint-compass-metrics/",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
